// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SimpleCache accepts a cacheSelector 1`] = `
Object {
  "data": Object {},
  "errors": Object {
    "def5678": [Error: Fake Error],
  },
  "loading": Object {},
}
`;

exports[`SimpleCache getCacheByKey returns empty data error loading if cache undefined 1`] = `
Object {
  "data": undefined,
  "error": undefined,
  "loading": false,
}
`;

exports[`SimpleCache reflects load state 1`] = `
Object {
  "data": Object {},
  "errors": Object {},
  "loading": Object {
    "abc1234": "abc1234",
  },
}
`;

exports[`SimpleCache reflects load to error state 1`] = `
Object {
  "data": Object {},
  "errors": Object {
    "abc1234": [Error: Fake Error],
  },
  "loading": Object {},
}
`;

exports[`SimpleCache reflects load to error to clear errors state 1`] = `
Object {
  "data": Object {},
  "errors": Object {},
  "loading": Object {},
}
`;

exports[`SimpleCache reflects load to success state 1`] = `
Object {
  "data": Object {
    "abc1234": Object {
      "body": Object {
        "fakeData": true,
      },
      "ok": true,
      "status": 200,
    },
  },
  "errors": Object {},
  "loading": Object {},
}
`;

exports[`SimpleCache reflects load to success to delete state 1`] = `
Object {
  "data": Object {},
  "errors": Object {},
  "loading": Object {},
}
`;

exports[`SimpleCache reflects multiple hashes stored 1`] = `
Object {
  "data": Object {
    "abc1234": Object {
      "body": Object {
        "fakeData": true,
      },
      "ok": true,
      "status": 200,
    },
  },
  "errors": Object {
    "def5678": [Error: Fake Error],
  },
  "loading": Object {},
}
`;

exports[`SimpleCache returns default cacheSelector 1`] = `
Object {
  "data": Object {},
  "errors": Object {
    "def5678": [Error: Fake Error],
  },
  "loading": Object {},
}
`;

exports[`SimpleCache returns default state if unknown @fetchye action type 1`] = `
Object {
  "data": Object {},
  "errors": Object {},
  "loading": Object {},
}
`;
